--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -117,6 +117,10 @@
         word-wrap: break-word;
       }
     }
+
+    .experience--no-print-check {
+      flex-direction: row;
+    }
   }
 }
 
