--- a/src/components/experience/responsibility.scss
+++ b/src/components/experience/responsibility.scss
@@ -22,6 +22,7 @@
 }
 
 .resp__summary {
+  color: #1c1c1c;
   width: 100%;
   text-align: left;
 }
