--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -199,7 +199,6 @@ body {
   word-wrap: break-word;
   font-kerning: normal;
   margin: 2em;
-  width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
